[package]
name = "solana-axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Solana SDK
solana-sdk = "1.18.0"  # Or latest version compatible with your code
spl-token = "4.0.0"    # Latest SPL token library
spl-associated-token-account = "2.2.0"

# Base58 for keypair encoding/decoding
bs58 = "0.5"

# Base64 for signature encoding
base64 = "0.21"

# For optional local .env loading (optional)
dotenvy = "0.15"

# Enable logging if needed
tracing = "0.1"
tracing-subscriber = "0.3"

# For env var fallback and formatting
anyhow = "1.0"
env = "1.0.1"
